# s-os-unix

./: .gitattributes  .gitignore  CHANGES  COPYING.JP  INSTALL  INTERNAL  MACHINES  Makefile.DIST  Makefile.am  Makefile.in  README  README.md  TODO  autogen.sh  compat.c  compat.h  configure  configure.ac  configure.in  dio.c  keymap.c  screen.c  simz80.c  simz80.h  simz80.pl  simz80.pl.DIST  sos.c  sos.h  trap.c  util.c
docs/: FAT.txt  FS.txt  FS2.txt  NEWDIO.txt  TODO
docs/Syscall/: DLOAD.txt  DSAVE.txt  FATRW-DEVCHKS-DSKRW.txt  FCBSCH.txt  FCGET.txt  FCOMP.txt  FRAFAT.txt  FRECLU.txt  FRESCH.txt  FSAME.txt  Kill.txt  NAME.txt  RDVSW.txt  SDVSW.txt  SET-RESET.txt  SWORD-DOS.txt  sword-main.txt
include/: Makefile.am  bswapmac.h  compat.h  container.h  dio.h  disk-2d.h  freestanding.h  fs-sword.h  fs-vfs.h  keymap.h  list.h  misc.h  queue.h  screen.h  sim-type.h  simz80.h  sos.h  storage-mzt.h  storage.h  trap.h  util.h
share/: .gitignore  Makefile.am  REDA
src/: Makefile.am  compat.c  dio.c  disk-2d.c  fs-mount.c  fs-path.c  fs-swd-dent.c  fs-swd-fat.c  fs-swd-rwblk.c  fs-sword.c  fs-utils.c  fs-vfs.c  fs-vnode.c  keymap.c  list.c  memcmp.c  misc.c  queue.c  screen.c  simz80.c  simz80.pl  sos.c  storage.c  trap.c  tst-swd-fs1.c  tst-swd-fs2.c
test/: Makefile.am  back-rw-test.2d  back-sword-test.2d  run.sh  tst-swd-dent.c  tst-swd-fat.c  tst-swd-fs1.c  tst-swd-fs10.c  tst-swd-fs2.c  tst-swd-fs3.c  tst-swd-fs4.c  tst-swd-fs5.c  tst-swd-fs6.c  tst-swd-fs7.c  tst-swd-fs8.c  tst-swd-fs9.c  tst-swd-rwblk.c  tst-swd-swdfs.h
test/old/: tst-swd-fs4.c
tools/: _gdbinit  gdb.sh
