dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR([simz80.h])

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.
dnl Replace `main' with a function in -ltermcap:
AC_CHECK_LIB(termcap, main)

dnl Checks for header files.
AC_HEADER_DIRENT
m4_warn([obsolete],
[The preprocessor macro `STDC_HEADERS' is obsolete.
  Except in unusual embedded environments, you can safely include all
  ISO C90 headers unconditionally.])dnl
# Autoupdate added the next two lines to ensure that your configure
# script's behavior did not change.  They are probably safe to remove.
AC_CHECK_INCLUDES_DEFAULT
AC_PROG_EGREP

AC_CHECK_HEADERS(fcntl.h limits.h sgtty.h sys/file.h sys/ioctl.h sys/time.h unistd.h)
AC_CHECK_HEADERS(termios.h)
AC_CHECK_HEADERS(curses.h termcap.h term.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
m4_warn([obsolete],
[your code may safely assume C89 semantics that RETSIGTYPE is void.
Remove this warning and the `AC_CACHE_CHECK' when you adjust the code.])dnl
AC_CACHE_CHECK([return type of signal handlers],[ac_cv_type_signal],[AC_COMPILE_IFELSE(
[AC_LANG_PROGRAM([#include <sys/types.h>
#include <signal.h>
],
		 [return *(signal (0, 0)) (0) == 1;])],
		   [ac_cv_type_signal=int],
		   [ac_cv_type_signal=void])])
AC_DEFINE_UNQUOTED([RETSIGTYPE],[$ac_cv_type_signal],[Define as the return type of signal handlers
		    (`int' or `void').])


dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_CHECK_FUNCS(getcwd strdup strerror strtol strcasecmp)
AC_CHECK_FUNCS(cfmakeraw memmove sigprocmask)
AC_CHECK_FUNCS(fcntl)

dnl special options
AC_ARG_WITH(delay,
[  --with-delay		Compile with exprement delayed write feature.],
[ case "$withval" in
  no)
    AC_MSG_RESULT(disabled delayed flush)
    ;;
  yes)
    AC_MSG_RESULT(enabled delayed flush)
    AC_DEFINE(OPT_DELAY_FLUSH)
    ;;
  *)
    AC_MSG_RESULT(enabled delayed flush: delay=$withval usec)
    AC_DEFINE(OPT_DELAY_FLUSH)
    AC_DEFINE_UNQUOTED(OPT_DELAY_FLUSH,$withval)
    ;;
  esac ]
)

AC_ARG_WITH(rcfile,
[  --with-rcfile=file	define default rcfile.],
[ case "$withval" in
  yes)
    AC_MSG_RESULT(you must specify rcfile)
    ;;
  *)
    AC_MSG_RESULT(set startup file as $withval)
    AC_DEFINE_UNQUOTED(RCFILE,"$withval")
    ;;
  esac ]
)

AC_ARG_WITH(forceansi,
[  --with-forceansi	assume as ansi terminal if tgetenv failed ],
[ AC_DEFINE(OPT_DEFAULT_ANSI)
  AC_MSG_RESULT(Assume as ansi terminal if tgetenv failed.)]
)

AC_ARG_WITH(wmkeymap,
[  --with-wmkeymap	set default control key Word Master like ],
[ AC_DEFINE(OPT_KEYMAP_WM)
  AC_MSG_RESULT(Set default keymap to Word Master like)]
)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
