
noinst_PROGRAMS = tst-swd-fs1.out tst-swd-fs6.out tst-swd-fs7.out tst-swd-fs8.out #tst-swd-fs3.out tst-swd-fs4.out tst-swd-fs5.out tst-swd-fat.out

tst_swd_fs1_out_CPPFLAGS = -DVERSION=\"${VERSION}\" -DDATADIR=\"$(pkgdatadir)\"
tst_swd_fs1_out_CFLAGS = ${NCURSES_CFLAGS}
tst_swd_fs1_out_SOURCES = tst-swd-fs1.c
tst_swd_fs1_out_LDADD = ../src/lib-sos-common.a ${NCURSES_LIBS}

# tst_swd_fs2_out_CPPFLAGS = -DVERSION=\"${VERSION}\" -DDATADIR=\"$(pkgdatadir)\"
# tst_swd_fs2_out_CFLAGS = ${NCURSES_CFLAGS}
# tst_swd_fs2_out_SOURCES = tst-swd-fs2.c
# tst_swd_fs2_out_LDADD = ../src/lib-sos-common.a ${NCURSES_LIBS}

# tst_swd_fs3_out_CPPFLAGS = -DVERSION=\"${VERSION}\" -DDATADIR=\"$(pkgdatadir)\"
# tst_swd_fs3_out_CFLAGS = ${NCURSES_CFLAGS}
# tst_swd_fs3_out_SOURCES = tst-swd-fs3.c
# tst_swd_fs3_out_LDADD = ../src/lib-sos-common.a ${NCURSES_LIBS}

# tst_swd_fs4_out_CPPFLAGS = -DVERSION=\"${VERSION}\" -DDATADIR=\"$(pkgdatadir)\"
# tst_swd_fs4_out_CFLAGS = ${NCURSES_CFLAGS}
# tst_swd_fs4_out_SOURCES = tst-swd-fs4.c
# tst_swd_fs4_out_LDADD = ../src/lib-sos-common.a ${NCURSES_LIBS}

# tst_swd_fs5_out_CPPFLAGS = -DVERSION=\"${VERSION}\" -DDATADIR=\"$(pkgdatadir)\"
# tst_swd_fs5_out_CFLAGS = ${NCURSES_CFLAGS}
# tst_swd_fs5_out_SOURCES = tst-swd-fs5.c
# tst_swd_fs5_out_LDADD = ../src/lib-sos-common.a ${NCURSES_LIBS}

tst_swd_fs6_out_CPPFLAGS = -DVERSION=\"${VERSION}\" -DDATADIR=\"$(pkgdatadir)\"
tst_swd_fs6_out_CFLAGS = ${NCURSES_CFLAGS}
tst_swd_fs6_out_SOURCES = tst-swd-fs6.c
tst_swd_fs6_out_LDADD = ../src/lib-sos-common.a ${NCURSES_LIBS}

tst_swd_fs7_out_CPPFLAGS = -DVERSION=\"${VERSION}\" -DDATADIR=\"$(pkgdatadir)\"
tst_swd_fs7_out_CFLAGS = ${NCURSES_CFLAGS}
tst_swd_fs7_out_SOURCES = tst-swd-fs7.c
tst_swd_fs7_out_LDADD = ../src/lib-sos-common.a ${NCURSES_LIBS}

tst_swd_fs8_out_CPPFLAGS = -DVERSION=\"${VERSION}\" -DDATADIR=\"$(pkgdatadir)\"
tst_swd_fs8_out_CFLAGS = ${NCURSES_CFLAGS}
tst_swd_fs8_out_SOURCES = tst-swd-fs8.c
tst_swd_fs8_out_LDADD = ../src/lib-sos-common.a ${NCURSES_LIBS}

# tst_swd_fat_out_CPPFLAGS = -DVERSION=\"${VERSION}\" -DDATADIR=\"$(pkgdatadir)\"
# tst_swd_fat_out_CFLAGS = ${NCURSES_CFLAGS}
# tst_swd_fat_out_SOURCES = tst-swd-fat.c tst-swd-dent.c tst-swd-rwblk.c
# tst_swd_fat_out_LDADD = ../src/lib-sos-common.a ${NCURSES_LIBS}
